--- a/explore/label dist.ipynb
+++ b/explore/label dist.ipynb
@@ -9,18 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "\n",
+    "from sklearn.metrics import f1_score, precision_score, accuracy_score, recall_score, classification_report "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +97,7 @@
        "4     [1, 6, 7, 17]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +117,7 @@
        "(55170, 1)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +137,7 @@
        "'[2, 5, 6, 17]'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +173,7 @@
        "[2, 5, 6, 17]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +216,7 @@
        "Name: high_levels, Length: 55170, dtype: object"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -273,26 +276,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# • 001-139 Infectious And Parasitic Diseases\n",
-    "# • 140-239 Neoplasms\n",
-    "# • 240-279 Endocrine, Nutritional And Metabolic Diseases, And Immunity Disorders **\n",
-    "# • 280-289 Diseases Of The Blood And Blood-Forming Organs\n",
-    "# • 290-319 Mental Disorders\n",
-    "# • 320-389 Diseases Of The Nervous System And Sense Organs\n",
-    "# • 390-459 Diseases Of The Circulatory System **\n",
-    "# • 460-519 Diseases Of The Respiratory System\n",
-    "# • 520-579 Diseases Of The Digestive System\n",
-    "# • 580-629 Diseases Of The Genitourinary System\n",
-    "# • 630-679 Complications Of Pregnancy, Childbirth, And The Puerperium *****\n",
-    "# • 680-709 Diseases Of The Skin And Subcutaneous Tissue\n",
-    "# • 710-739 Diseases Of The Musculoskeletal System And Connective Tissue\n",
-    "# • 740-759 Congenital Anomalies *****\n",
-    "# • 760-779 Certain Conditions Originating In The Perinatal Period *****\n",
-    "# • 780-799 Symptoms, Signs, And Ill-Defined Conditions\n",
-    "# • 800-999 Injury And Poisoning\n",
-    "# • V01-V91 Supplementary Classification Of Factors Influencing Health Status And Contact\n",
+    "# 0  • 001-139 Infectious And Parasitic Diseases\n",
+    "# 1  • 140-239 Neoplasms\n",
+    "# 2  • 240-279 Endocrine, Nutritional And Metabolic Diseases, And Immunity Disorders **\n",
+    "# 3  • 280-289 Diseases Of The Blood And Blood-Forming Organs\n",
+    "# 4  • 290-319 Mental Disorders\n",
+    "# 5  • 320-389 Diseases Of The Nervous System And Sense Organs\n",
+    "# 6  • 390-459 Diseases Of The Circulatory System **\n",
+    "# 7  • 460-519 Diseases Of The Respiratory System\n",
+    "# 8  • 520-579 Diseases Of The Digestive System\n",
+    "# 9  • 580-629 Diseases Of The Genitourinary System\n",
+    "# 10 • 630-679 Complications Of Pregnancy, Childbirth, And The Puerperium *****\n",
+    "# 11 • 680-709 Diseases Of The Skin And Subcutaneous Tissue\n",
+    "# 12 • 710-739 Diseases Of The Musculoskeletal System And Connective Tissue\n",
+    "# 13 • 740-759 Congenital Anomalies *****\n",
+    "# 14 • 760-779 Certain Conditions Originating In The Perinatal Period *****\n",
+    "# 15 • 780-799 Symptoms, Signs, And Ill-Defined Conditions\n",
+    "# 16 • 800-999 Injury And Poisoning\n",
+    "# 17 • V01-V91 Supplementary Classification Of Factors Influencing Health Status And Contact\n",
     "# With Health Services **\n",
-    "# • E000-E999 Supplementary Classification Of External Causes Of Injury And Poisoning"
+    "# 18 • E000-E999 Supplementary Classification Of External Causes Of Injury And Poisoning"
    ]
   },
   {
@@ -961,6 +964,362 @@
    "source": [
     "# 1 for 0-19 codes\n",
     "# then 19 different models - 1 for each label. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test 3 baselines:\n",
+    "\n",
+    "- all 1s\n",
+    "- 1s for any labels appearing over 50%, 0 o.w.\n",
+    "- Bernoulli == 1 with p as the proportion of documents the labels appears in\n",
+    "\n",
+    "use small dataset size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from docopt import docopt\n",
+    "from nltk.translate.bleu_score import corpus_bleu, sentence_bleu, SmoothingFunction\n",
+    "# from nmt_model import Hypothesis, NMT\n",
+    "import numpy as np\n",
+    "from typing import List, Tuple, Dict, Set, Union\n",
+    "from tqdm import tqdm\n",
+    "# from utils import read_corpus, batch_iter, ind_to_one_hot\n",
+    "# from vocab import Vocab, VocabEntry\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn.utils\n",
+    "\n",
+    "from sklearn.metrics import f1_score, precision_score, accuracy_score, recall_score, classification_report \n",
+    "from statistics import harmonic_mean \n",
+    "\n",
+    "import csv\n",
+    "import ast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 1101 lines.\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = '../data/small/dev_labels.csv'\n",
+    "data = []\n",
+    "all_labels = set()\n",
+    "\n",
+    "with open(file_path) as csv_file:\n",
+    "    csv_reader = csv.reader(csv_file, delimiter='\\n')\n",
+    "    line_count = 0\n",
+    "    for row in csv_reader:\n",
+    "        if line_count == 0:\n",
+    "#                 print(f'Column names are {\", \".join(row[0])}')\n",
+    "            line_count += 1\n",
+    "        else:\n",
+    "#             if column == 'text':\n",
+    "#                 sent = nltk.word_tokenize(row[0])\n",
+    "#                 if remove_stopwords:\n",
+    "#                     sent = [i for i in sent if i not in stop_words]\n",
+    "#                     sent = [i for i in sent if i not in dumb_words]\n",
+    "#                 # cut off sentence lengths:\n",
+    "#                 if sent_max_length > 0:\n",
+    "#                     data.append(sent[:int(sent_max_length)])\n",
+    "#                 else:\n",
+    "#                     data.append(sent)\n",
+    "#             else:\n",
+    "            this_row_labs = ast.literal_eval(row[0])\n",
+    "            data.append(this_row_labs)\n",
+    "            line_count += 1\n",
+    "    print(f'Processed {line_count} lines.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ind_to_one_hot(labels_list, num_labels):\n",
+    "    \"\"\"\n",
+    "    @param labels_list(List[List[int]]): \n",
+    "    @param num_labels: Total number of labels\n",
+    "    \"\"\"\n",
+    "    labels_torch = torch.zeros(len(labels_list), num_labels)\n",
+    "    for i in range(len(labels_list)):\n",
+    "        labels_torch[i,labels_list[i]] = 1\n",
+    "    return labels_torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_freqs = high_level_count/np.max(high_level_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev_labels = ind_to_one_hot(data, num_labels=19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base1 = torch.ones((1100,19)) # all 1s\n",
+    "base2 = torch.zeros((1100,19)) # 2, 6, 7, 17 = 1\n",
+    "base2[:,[2,6,7,17]] = 1\n",
+    "base3 = np.zeros((1100,19))\n",
+    "for col in range(19):\n",
+    "    base3[:,col] = np.random.binomial(n=1,p=label_freqs[col],size=1100)\n",
+    "base3 = torch.from_numpy(base3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 1., 1.,  ..., 1., 1., 1.],\n",
+      "        [1., 1., 1.,  ..., 1., 1., 1.],\n",
+      "        [1., 1., 1.,  ..., 1., 1., 1.],\n",
+      "        ...,\n",
+      "        [1., 1., 1.,  ..., 1., 1., 1.],\n",
+      "        [1., 1., 1.,  ..., 1., 1., 1.],\n",
+      "        [1., 1., 1.,  ..., 1., 1., 1.]])\n",
+      "\n",
+      "tensor([[0., 0., 1.,  ..., 0., 1., 0.],\n",
+      "        [0., 0., 1.,  ..., 0., 1., 0.],\n",
+      "        [0., 0., 1.,  ..., 0., 1., 0.],\n",
+      "        ...,\n",
+      "        [0., 0., 1.,  ..., 0., 1., 0.],\n",
+      "        [0., 0., 1.,  ..., 0., 1., 0.],\n",
+      "        [0., 0., 1.,  ..., 0., 1., 0.]])\n",
+      "\n",
+      "tensor([[0., 0., 0.,  ..., 0., 1., 0.],\n",
+      "        [1., 1., 1.,  ..., 0., 1., 0.],\n",
+      "        [0., 0., 1.,  ..., 0., 1., 1.],\n",
+      "        ...,\n",
+      "        [0., 0., 0.,  ..., 0., 1., 0.],\n",
+      "        [0., 0., 1.,  ..., 0., 1., 0.],\n",
+      "        [0., 0., 1.,  ..., 1., 1., 1.]], dtype=torch.float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(base1)\n",
+    "print()\n",
+    "print(base2)\n",
+    "print()\n",
+    "print(base3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_baseline(labels, baseline_labels):\n",
+    "    f1 = f1_score(y_true=labels, y_pred=baseline_labels, \n",
+    "                     pos_label=1, average='micro')\n",
+    "    print(\"calcualted val f1: \", f1)\n",
+    "    cr = classification_report(y_true=labels, y_pred=baseline_labels, \n",
+    "                               labels=None, target_names=None, \n",
+    "                               sample_weight=None, digits=2, \n",
+    "                               output_dict=False)\n",
+    "    print(\"******** Validation Report *********\\n\",cr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calcualted val f1:  0.5062359289568666\n",
+      "******** Validation Report *********\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.31      1.00      0.47       336\n",
+      "           1       0.16      1.00      0.28       178\n",
+      "           2       0.72      1.00      0.84       795\n",
+      "           3       0.38      1.00      0.55       422\n",
+      "           4       0.28      1.00      0.43       304\n",
+      "           5       0.32      1.00      0.49       357\n",
+      "           6       0.87      1.00      0.93       958\n",
+      "           7       0.51      1.00      0.68       562\n",
+      "           8       0.43      1.00      0.60       473\n",
+      "           9       0.49      1.00      0.66       536\n",
+      "          10       0.00      1.00      0.01         3\n",
+      "          11       0.12      1.00      0.21       129\n",
+      "          12       0.23      1.00      0.37       249\n",
+      "          13       0.04      1.00      0.07        42\n",
+      "          14       0.00      0.00      0.00         0\n",
+      "          15       0.36      1.00      0.53       394\n",
+      "          16       0.41      1.00      0.58       450\n",
+      "          17       0.54      1.00      0.70       596\n",
+      "          18       0.27      1.00      0.43       299\n",
+      "\n",
+      "   micro avg       0.34      1.00      0.51      7083\n",
+      "   macro avg       0.34      0.95      0.46      7083\n",
+      "weighted avg       0.49      1.00      0.63      7083\n",
+      " samples avg       0.34      1.00      0.49      7083\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/austinmurphy/opt/anaconda3/envs/attentionxml/lib/python3.7/site-packages/sklearn/metrics/classification.py:1439: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_baseline(labels=dev_labels, baseline_labels=base1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calcualted val f1:  0.5070103631455195\n",
+      "******** Validation Report *********\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00       336\n",
+      "           1       0.00      0.00      0.00       178\n",
+      "           2       0.72      1.00      0.84       795\n",
+      "           3       0.00      0.00      0.00       422\n",
+      "           4       0.00      0.00      0.00       304\n",
+      "           5       0.00      0.00      0.00       357\n",
+      "           6       0.87      1.00      0.93       958\n",
+      "           7       0.51      1.00      0.68       562\n",
+      "           8       0.00      0.00      0.00       473\n",
+      "           9       0.00      0.00      0.00       536\n",
+      "          10       0.00      0.00      0.00         3\n",
+      "          11       0.00      0.00      0.00       129\n",
+      "          12       0.00      0.00      0.00       249\n",
+      "          13       0.00      0.00      0.00        42\n",
+      "          14       0.00      0.00      0.00         0\n",
+      "          15       0.00      0.00      0.00       394\n",
+      "          16       0.00      0.00      0.00       450\n",
+      "          17       0.54      1.00      0.70       596\n",
+      "          18       0.00      0.00      0.00       299\n",
+      "\n",
+      "   micro avg       0.66      0.41      0.51      7083\n",
+      "   macro avg       0.14      0.21      0.17      7083\n",
+      "weighted avg       0.29      0.41      0.33      7083\n",
+      " samples avg       0.66      0.45      0.51      7083\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/austinmurphy/opt/anaconda3/envs/attentionxml/lib/python3.7/site-packages/sklearn/metrics/classification.py:1437: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_baseline(labels=dev_labels, baseline_labels=base2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calcualted val f1:  0.5219790797664121\n",
+      "******** Validation Report *********\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.29      0.32      0.30       336\n",
+      "           1       0.16      0.18      0.17       178\n",
+      "           2       0.72      0.79      0.76       795\n",
+      "           3       0.39      0.46      0.42       422\n",
+      "           4       0.27      0.37      0.31       304\n",
+      "           5       0.33      0.38      0.35       357\n",
+      "           6       0.87      1.00      0.93       958\n",
+      "           7       0.51      0.60      0.55       562\n",
+      "           8       0.43      0.49      0.46       473\n",
+      "           9       0.48      0.51      0.50       536\n",
+      "          10       0.00      0.00      0.00         3\n",
+      "          11       0.08      0.09      0.09       129\n",
+      "          12       0.23      0.23      0.23       249\n",
+      "          13       0.05      0.10      0.07        42\n",
+      "          14       0.00      0.00      0.00         0\n",
+      "          15       0.35      0.43      0.39       394\n",
+      "          16       0.44      0.56      0.49       450\n",
+      "          17       0.56      0.75      0.64       596\n",
+      "          18       0.28      0.37      0.32       299\n",
+      "\n",
+      "   micro avg       0.48      0.57      0.52      7083\n",
+      "   macro avg       0.34      0.40      0.37      7083\n",
+      "weighted avg       0.49      0.57      0.53      7083\n",
+      " samples avg       0.49      0.59      0.50      7083\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_baseline(labels=dev_labels, baseline_labels=base3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Learning more than baselines!"
    ]
   },
   {
