--- a/explore/EDA.ipynb
+++ b/explore/EDA.ipynb
@@ -37,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -251,6 +253,52 @@
    "source": [
     "d_icd.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First 3 labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1042\n"
+     ]
+    }
+   ],
+   "source": [
+    "uniq_first3 = np.unique(d_icd.first3)\n",
+    "print(len(uniq_first3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -779,7 +827,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -4633,6 +4683,490 @@
    "metadata": {},
    "source": [
     "## Label distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating rolled-up codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ast\n",
+    "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n",
+      "done\n",
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "high_level_to_rolled_up(filepath='../data/tiny/tiny_data.csv', folder='tiny')\n",
+    "high_level_to_rolled_up(filepath='../data/small/small_data.csv', folder='small')\n",
+    "high_level_to_rolled_up(filepath='../data/full/full_data.csv', folder='full')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def high_level_to_rolled_up(filepath, folder=None):\n",
+    "    dat = pd.read_csv(filepath, sep='\\t',header=0)\n",
+    "    dat.head()\n",
+    "    \n",
+    "    dat['ICD9_codes_'] = dat['ICD9_codes'].apply(lambda x: ast.literal_eval(x))\n",
+    "    rolledup_codes_ = dat['ICD9_codes_'].apply(lambda x: [i[:3] for i in x])\n",
+    "    rolledup_codes_ = rolledup_codes_.apply(lambda x: list(np.unique(x)))\n",
+    "    \n",
+    "    train, test = train_test_split(rolledup_codes_, test_size=0.2, random_state=0, shuffle=True)\n",
+    "    train, dev = train_test_split(train, test_size=0.25, random_state=0, shuffle=True)\n",
+    "    \n",
+    "    train.to_csv(\"../data/\"+folder+\"/train_labels_rolled_up.csv\", index=False, sep='\\n')\n",
+    "    dev.to_csv(\"../data/\"+folder+\"/dev_labels_rolled_up.csv\", index=False, sep='\\n')\n",
+    "    test.to_csv(\"../data/\"+folder+\"/test_labels_rolled_up.csv\", index=False, sep='\\n')\n",
+    "    \n",
+    "    print('done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_icd9_codes = [item for sublist in icd9_codes_ for item in sublist]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rolledup_codes_ = icd9_codes_.apply(lambda x: [i[:3] for i in x])\n",
+    "rolledup_codes_ = rolledup_codes_.apply(lambda x: list(np.unique(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(55170,)"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rolledup_codes_.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rolledup_codes_.to_csv('../data/full/rolled_up_labels.csv', sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ICD9_codes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>['011', '211', '263', '276', '425', '427', '50...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>['011', '211', '263', '276', '425', '427', '50...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>['244', '276', '311', '486', '491', '518']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>['276', '453', '496', '553']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>['244', '272', '276', '348', '359', '401', '41...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55165</th>\n",
+       "      <td>['433', '438', '443', '745', '780']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55166</th>\n",
+       "      <td>['112', '263', '272', '331', '348', '401', '42...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55167</th>\n",
+       "      <td>['250', '331', '348', '401', '429', '430', '43...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55168</th>\n",
+       "      <td>['305', '805', '807', '860', '865', 'E81']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55169</th>\n",
+       "      <td>['276', '427', '807', '808', '820', '824', '83...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>55170 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              ICD9_codes\n",
+       "0      ['011', '211', '263', '276', '425', '427', '50...\n",
+       "1      ['011', '211', '263', '276', '425', '427', '50...\n",
+       "2             ['244', '276', '311', '486', '491', '518']\n",
+       "3                           ['276', '453', '496', '553']\n",
+       "4      ['244', '272', '276', '348', '359', '401', '41...\n",
+       "...                                                  ...\n",
+       "55165                ['433', '438', '443', '745', '780']\n",
+       "55166  ['112', '263', '272', '331', '348', '401', '42...\n",
+       "55167  ['250', '331', '348', '401', '429', '430', '43...\n",
+       "55168         ['305', '805', '807', '860', '865', 'E81']\n",
+       "55169  ['276', '427', '807', '808', '820', '824', '83...\n",
+       "\n",
+       "[55170 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('../data/full/rolled_up_labels.csv', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlb = MultiLabelBinarizer(sparse_output=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_hots = mlb.fit_transform(rolledup_codes_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(55170, 941)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(one_hots.shape)\n",
+    "one_hots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['003', '004', '005', '007', '008', '009', '010', '011', '012',\n",
+       "       '013', '014', '015', '018', '021', '023', '027', '030', '031',\n",
+       "       '032', '033', '034', '035', '036', '038', '039', '040', '041',\n",
+       "       '042', '045', '046', '047', '048', '049', '052', '053', '054',\n",
+       "       '057', '058', '062', '066', '070', '075', '077', '078', '079',\n",
+       "       '082', '083', '084', '085', '086', '088', '090', '091', '093',\n",
+       "       '094', '096', '097', '098', '099', '110', '111', '112', '114',\n",
+       "       '115', '116', '117', '118', '120', '121', '122', '123', '125',\n",
+       "       '127', '130', '131', '132', '133', '134', '135', '136', '137',\n",
+       "       '138', '139', '140', '141', '142', '143', '144', '145', '146',\n",
+       "       '147', '148', '149', '150', '151', '152', '153', '154', '155',\n",
+       "       '156', '157', '158', '159', '160', '161', '162', '163', '164',\n",
+       "       '170', '171', '172', '173', '174', '175', '176', '179', '180',\n",
+       "       '182', '183', '184', '185', '186', '187', '188', '189', '190',\n",
+       "       '191', '192', '193', '194', '195', '196', '197', '198', '199',\n",
+       "       '200', '201', '202', '203', '204', '205', '206', '207', '208',\n",
+       "       '209', '210', '211', '212', '213', '214', '215', '216', '217',\n",
+       "       '218', '219', '220', '221', '223', '225', '226', '227', '228',\n",
+       "       '229', '230', '231', '232', '233', '235', '236', '237', '238',\n",
+       "       '239', '240', '241', '242', '243', '244', '245', '246', '249',\n",
+       "       '250', '251', '252', '253', '254', '255', '256', '257', '258',\n",
+       "       '259', '260', '261', '262', '263', '265', '266', '267', '268',\n",
+       "       '269', '270', '271', '272', '273', '274', '275', '276', '277',\n",
+       "       '278', '279', '280', '281', '282', '283', '284', '285', '286',\n",
+       "       '287', '288', '289', '290', '291', '292', '293', '294', '295',\n",
+       "       '296', '297', '298', '299', '300', '301', '302', '303', '304',\n",
+       "       '305', '306', '307', '308', '309', '310', '311', '312', '313',\n",
+       "       '314', '315', '316', '317', '318', '319', '320', '321', '322',\n",
+       "       '323', '324', '325', '326', '327', '330', '331', '332', '333',\n",
+       "       '334', '335', '336', '337', '338', '339', '340', '341', '342',\n",
+       "       '343', '344', '345', '346', '347', '348', '349', '350', '351',\n",
+       "       '352', '353', '354', '355', '356', '357', '358', '359', '360',\n",
+       "       '361', '362', '363', '364', '365', '366', '367', '368', '369',\n",
+       "       '370', '371', '372', '373', '374', '375', '376', '377', '378',\n",
+       "       '379', '380', '381', '382', '383', '384', '385', '386', '387',\n",
+       "       '388', '389', '390', '391', '393', '394', '395', '396', '397',\n",
+       "       '398', '401', '402', '403', '404', '405', '410', '411', '412',\n",
+       "       '413', '414', '415', '416', '417', '420', '421', '422', '423',\n",
+       "       '424', '425', '426', '427', '428', '429', '430', '431', '432',\n",
+       "       '433', '434', '435', '436', '437', '438', '440', '441', '442',\n",
+       "       '443', '444', '445', '446', '447', '448', '449', '451', '452',\n",
+       "       '453', '454', '455', '456', '457', '458', '459', '460', '461',\n",
+       "       '462', '463', '464', '465', '466', '470', '471', '472', '473',\n",
+       "       '474', '475', '477', '478', '480', '481', '482', '483', '484',\n",
+       "       '485', '486', '487', '488', '490', '491', '492', '493', '494',\n",
+       "       '495', '496', '500', '501', '502', '506', '507', '508', '510',\n",
+       "       '511', '512', '513', '514', '515', '516', '517', '518', '519',\n",
+       "       '520', '521', '522', '523', '524', '525', '526', '527', '528',\n",
+       "       '529', '530', '531', '532', '533', '534', '535', '536', '537',\n",
+       "       '538', '539', '540', '541', '542', '543', '550', '551', '552',\n",
+       "       '553', '555', '556', '557', '558', '560', '562', '564', '565',\n",
+       "       '566', '567', '568', '569', '570', '571', '572', '573', '574',\n",
+       "       '575', '576', '577', '578', '579', '580', '581', '582', '583',\n",
+       "       '584', '585', '586', '587', '588', '589', '590', '591', '592',\n",
+       "       '593', '594', '595', '596', '597', '598', '599', '600', '601',\n",
+       "       '602', '603', '604', '605', '607', '608', '610', '611', '614',\n",
+       "       '615', '616', '617', '618', '619', '620', '621', '622', '623',\n",
+       "       '624', '625', '626', '627', '628', '629', '632', '633', '634',\n",
+       "       '635', '639', '641', '642', '643', '644', '645', '646', '647',\n",
+       "       '648', '649', '651', '652', '654', '655', '656', '657', '658',\n",
+       "       '659', '660', '661', '663', '664', '665', '666', '668', '669',\n",
+       "       '670', '671', '672', '673', '674', '677', '680', '681', '682',\n",
+       "       '683', '684', '685', '686', '690', '691', '692', '693', '694',\n",
+       "       '695', '696', '697', '698', '700', '701', '702', '703', '704',\n",
+       "       '705', '706', '707', '708', '709', '710', '711', '712', '713',\n",
+       "       '714', '715', '716', '717', '718', '719', '720', '721', '722',\n",
+       "       '723', '724', '725', '726', '727', '728', '729', '730', '731',\n",
+       "       '732', '733', '734', '735', '736', '737', '738', '740', '741',\n",
+       "       '742', '743', '744', '745', '746', '747', '748', '749', '750',\n",
+       "       '751', '752', '753', '754', '755', '756', '757', '758', '759',\n",
+       "       '760', '761', '762', '763', '764', '765', '766', '767', '768',\n",
+       "       '769', '770', '771', '772', '773', '774', '775', '776', '777',\n",
+       "       '778', '779', '780', '781', '782', '783', '784', '785', '786',\n",
+       "       '787', '788', '789', '790', '791', '792', '793', '794', '795',\n",
+       "       '796', '798', '799', '800', '801', '802', '803', '804', '805',\n",
+       "       '806', '807', '808', '810', '811', '812', '813', '814', '815',\n",
+       "       '816', '817', '819', '820', '821', '822', '823', '824', '825',\n",
+       "       '826', '828', '830', '831', '832', '833', '834', '835', '836',\n",
+       "       '837', '838', '839', '840', '841', '842', '843', '844', '845',\n",
+       "       '846', '847', '848', '850', '851', '852', '853', '854', '860',\n",
+       "       '861', '862', '863', '864', '865', '866', '867', '868', '869',\n",
+       "       '870', '871', '872', '873', '874', '875', '876', '877', '878',\n",
+       "       '879', '880', '881', '882', '883', '884', '885', '886', '887',\n",
+       "       '890', '891', '892', '893', '894', '896', '897', '900', '901',\n",
+       "       '902', '903', '904', '905', '906', '907', '908', '909', '910',\n",
+       "       '911', '912', '913', '914', '915', '916', '917', '918', '919',\n",
+       "       '920', '921', '922', '923', '924', '925', '926', '927', '928',\n",
+       "       '930', '932', '933', '934', '935', '936', '937', '938', '939',\n",
+       "       '941', '942', '943', '944', '945', '946', '947', '948', '950',\n",
+       "       '951', '952', '953', '954', '955', '956', '957', '958', '959',\n",
+       "       '960', '961', '962', '963', '964', '965', '966', '967', '968',\n",
+       "       '969', '970', '971', '972', '973', '974', '975', '976', '977',\n",
+       "       '980', '982', '983', '985', '986', '987', '988', '989', '990',\n",
+       "       '991', '992', '994', '995', '996', '997', '998', '999', 'E00',\n",
+       "       'E01', 'E02', 'E03', 'E80', 'E81', 'E82', 'E83', 'E84', 'E85',\n",
+       "       'E86', 'E87', 'E88', 'E89', 'E90', 'E91', 'E92', 'E93', 'E94',\n",
+       "       'E95', 'E96', 'E97', 'E98', 'E99', 'V01', 'V02', 'V03', 'V04',\n",
+       "       'V05', 'V06', 'V07', 'V08', 'V09', 'V10', 'V11', 'V12', 'V13',\n",
+       "       'V14', 'V15', 'V16', 'V17', 'V18', 'V19', 'V20', 'V22', 'V23',\n",
+       "       'V25', 'V26', 'V27', 'V28', 'V29', 'V30', 'V31', 'V32', 'V33',\n",
+       "       'V34', 'V40', 'V42', 'V43', 'V44', 'V45', 'V46', 'V48', 'V49',\n",
+       "       'V50', 'V51', 'V53', 'V54', 'V55', 'V56', 'V58', 'V59', 'V60',\n",
+       "       'V61', 'V62', 'V63', 'V64', 'V65', 'V66', 'V67', 'V69', 'V70',\n",
+       "       'V71', 'V72', 'V74', 'V76', 'V78', 'V81', 'V83', 'V84', 'V85',\n",
+       "       'V86', 'V87', 'V88', 'V90', 'V91'], dtype=object)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlb.classes_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pickle import dump"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dump(mlb, open('./mlb_rolledup.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pickle import load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pickle import load\n",
+    "mlb2 = load(open('./mlb_rolledup.pkl', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlb2.transform(np.array(['941','V88']))"
    ]
   },
   {
